--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 /*  Import From Base  */
+/* --------- Icon's properties in Wrapper  --------- */
 /*  Import From components  */
 /*  Import From layaout  */
 .zemin {
@@ -27,6 +28,31 @@
 .sectionBodyOfPage {
   margin-left: 328px;
   width: 785px; }
+  .sectionBodyOfPage .wrapper {
+    display: flex; }
+    .sectionBodyOfPage .wrapper .carIconDiv {
+      width: 50px;
+      height: 50px;
+      color: white;
+      background-color: #51859a;
+      border-radius: 50%; }
+    .sectionBodyOfPage .wrapper .carTextDiv {
+      margin-top: 16px;
+      margin-bottom: 14px;
+      margin-left: 20px;
+      width: 100px;
+      height: 20px;
+      color: #51859a;
+      font-font-size: 20px;
+      font-font-weight: 500;
+      font-family: 'Roboto', sans-serif; }
+    .sectionBodyOfPage .wrapper .LineInStepBar {
+      width: 95px;
+      margin-top: 26px;
+      margin-bottom: 23px;
+      margin-left: 20px; }
+    .sectionBodyOfPage .wrapper .iconsInWrapper {
+      padding: 17px; }
 
 /*  Import From pages  */
 
