--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -6,5 +6,5 @@
 $paddingSize:17px;
 
 // Background Color Of Icons And Button
-$backColor:#51859a;
-
+$backColorFirstStep:#51859a;
+$backColorAnotherSteps:#717173;
