--- a/sass/base/_mixins.scss
+++ b/sass/base/_mixins.scss
@@ -5,3 +5,24 @@
     margin-top: 17px;
     margin-bottom: 17px;
 }
+
+@mixin mixinForSteps {
+    width: 50px;
+    height: 50px; 
+    border-radius: 50%;
+    margin-left: 20px;
+}
+
+@mixin mixinForStepText {
+    width: 112px;
+    margin : {
+      left:14px;
+      top: 10px;
+    }
+   
+    font : {
+        size: 18px;
+        weight: 500;
+        family: 'Roboto', sans-serif;
+    }
+}
