--- a/sass/layout/partials/_section.scss
+++ b/sass/layout/partials/_section.scss
@@ -1,43 +1,77 @@
 .sectionBodyOfPage{
-    margin-left: 328px;
-    width: 785px;
+    //margin-left: 328px;
+    //width: 785px;
+   .sectionTop{
+       margin-left: 14%; //328px;
+       margin-top: 30px;
+       .stepBarBodyRow{
+           display: flex;
+
+           .IconsWrapper{
+            display:flex ;
+            
+              .IconsSpanFirstStep{
+                  @include mixinForSteps;
+                  color: white;
+                  background-color: $backColorFirstStep; 
+                  
+                  
+              }
+              .IconsSpanSecondStep{
+                 
+                  @include mixinForSteps;
+                  color: $backColorAnotherSteps;
+                  border: 1px solid $backColorAnotherSteps ;
+                  
+              }
+              .IconsSpanLastStep{
+                  @include mixinForSteps;
+                  color: $backColorAnotherSteps;
+                  border: 1px solid $backColorAnotherSteps ;
+                  
+              }
+              
+              .IconFirstText{
+      
+                  color: $backColorFirstStep;
+                  @include mixinForStepText;
+              }
+              .IconSecondText{
+      
+                  color: $backColorAnotherSteps;
+                  @include mixinForStepText;
+      
+              }
+              .IconLastText{
+      
+                  color: $backColorAnotherSteps;
+                  @include mixinForStepText;
+      
+              }
+              .LineInStepBar{
+              
+                  width: 95px;
+      
+                  margin : 
+                  {
+                  left:0px; //20
+                  top: 23px; //26
+                  bottom: 23px;
+                  }
+              }
+              
+              .FirstIcon{
+                  padding: $paddingSize;
+              }
+              .SecondIcon{
+                  padding: 14.5px;
+              }
+              .LastIcon{
+                  padding: 14.5px;
+              }
+          }
+       }
     
-    .wrapper{
-      display:flex ;
-
-        .carIconDiv{
-            width: 50px;
-            height: 50px; 
-            color: white;
-            background-color: $backColor; 
-            border-radius: 50%;
-        }
-        .carTextDiv{
-
-            margin-top: 16px; 
-            margin-bottom: 14px;
-            margin-left: 20px;
-            width: 100px;
-            height: 20px;
-            color: $backColor;
-
-            font : {
-                font-size: 20px;
-                font-weight: 500;
-                family: 'Roboto', sans-serif;
-            }
-           
-        }
-
-        .LineInStepBar{
-          width: 95px;
-          margin-top: 26px;
-          margin-bottom: 23px;
-          margin-left: 20px;
-        }
-        
-        .iconsInWrapper{
-            padding: $paddingSize;
-        }
-    }
+   }
+   
 }
