--- a/sass/base/_mixins.scss
+++ b/sass/base/_mixins.scss
@@ -9,6 +9,7 @@
 @mixin mixinForSteps {
     width: 50px;
     height: 50px; 
+    font-size: 16px 16px;
     border-radius: 50%;
     margin-left: 20px;
 }
