--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -6,5 +6,6 @@
 $paddingSize:17px;
 
 // Background Color Of Icons And Button
+$backMainColorOfIcon:#51859a;
 $backColorFirstStep:#51859a;
 $backColorAnotherSteps:#717173;
