--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,13 +6,13 @@
 
 /*  Import From components  */
 
-
+@import "./components/littleCarIcon";
+@import "./components/lineInStepBar";
+@import "./components/imgFirst";
+@import "./components/imgSecond";
 
 /*  Import From layaout  */
 @import "./layout/layout";
 
 
 /*  Import From pages  */
-
-
-
