--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,38 @@
 /*  Import From Base  */
 /* --------- Icon's properties in Wrapper  --------- */
 /*  Import From components  */
+.smallIconWrapper {
+  width: 32px;
+  height: 32px;
+  font-size: 12px;
+  color: white;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-top: 7px;
+  margin-top: 21px;
+  margin-bottom: 21px;
+  border-radius: 50%;
+  background-color: #51859a; }
+
+.LineInStepBar {
+  width: 95px;
+  margin-left: 0px;
+  margin-top: 23px;
+  margin-bottom: 23px; }
+
+.imgFirst {
+  border-radius: 13px;
+  width: 276px;
+  height: 150px;
+  margin-top: 22px; }
+
+.imgSecond {
+  border-radius: 13px;
+  width: 276px;
+  height: 150px;
+  margin-top: 22px;
+  margin-bottom: 41px; }
+
 /*  Import From layaout  */
 .zemin {
   width: 98.9%;
@@ -82,11 +114,6 @@
           font-size: 18px;
           font-weight: 500;
           font-family: 'Roboto', sans-serif; }
-        .sectionBodyOfPage .sectionTop .stepBarBodyRow .IconsWrapper .LineInStepBar {
-          width: 95px;
-          margin-left: 0px;
-          margin-top: 23px;
-          margin-bottom: 23px; }
         .sectionBodyOfPage .sectionTop .stepBarBodyRow .IconsWrapper .FirstIcon {
           padding: 17px; }
         .sectionBodyOfPage .sectionTop .stepBarBodyRow .IconsWrapper .SecondIcon {
@@ -98,6 +125,121 @@
     box-shadow: 0 10px 20px 0 rgba(113, 113, 115, 0.1);
     background-color: #ffffff;
     margin-top: 36px; }
+    .sectionBodyOfPage .sectionMid .FirstRow {
+      margin-left: 30px;
+      margin-right: 30px;
+      border-bottom: 1px solid #d3dbdd; }
+    .sectionBodyOfPage .sectionMid .SecondRow .row1 {
+      border-bottom: 1px solid #d3dbdd; }
+    .sectionBodyOfPage .sectionMid .SecondRow .row2 {
+      border-bottom: 1px solid #d3dbdd; }
+    .sectionBodyOfPage .sectionMid .SecondRow .row3 {
+      border-bottom: 1px solid #d3dbdd; }
+    .sectionBodyOfPage .sectionMid .SecondRow .row4 {
+      border-bottom: 1px solid #d3dbdd; }
+    .sectionBodyOfPage .sectionMid .SecondRow .row5 {
+      border-bottom: 1px solid #d3dbdd; }
+    .sectionBodyOfPage .sectionMid .SecondRow .row6 {
+      border-bottom: 1px solid #d3dbdd; }
+    .sectionBodyOfPage .sectionMid .SecondRow .row7 {
+      border-bottom: 1px solid #d3dbdd; }
+    .sectionBodyOfPage .sectionMid .SecondRow .row1 {
+      padding-bottom: 13px;
+      padding-top: 13px;
+      padding-bottom: 13px; }
+    .sectionBodyOfPage .sectionMid .SecondRow .leftInfo1 {
+      font-family: 'Roboto Slab', serif;
+      font-size: 14px;
+      color: #222831; }
+    .sectionBodyOfPage .sectionMid .SecondRow .rightInfo1 {
+      font-family: 'Roboto Slab', serif;
+      font-size: 14px;
+      text-align: right;
+      font-weight: bold; }
+    .sectionBodyOfPage .sectionMid .SecondRow .row2 {
+      padding-bottom: 13px;
+      padding-top: 13px; }
+    .sectionBodyOfPage .sectionMid .SecondRow .leftInfo2 {
+      font-family: 'Roboto Slab', serif;
+      font-size: 14px;
+      color: #222831; }
+    .sectionBodyOfPage .sectionMid .SecondRow .rightInfo2 {
+      font-family: 'Roboto Slab', serif;
+      font-size: 14px;
+      text-align: right;
+      font-weight: bold; }
+    .sectionBodyOfPage .sectionMid .SecondRow .row3 {
+      padding-bottom: 13px;
+      padding-top: 13px; }
+    .sectionBodyOfPage .sectionMid .SecondRow .leftInfo3 {
+      font-family: 'Roboto Slab', serif;
+      font-size: 14px;
+      color: #222831; }
+    .sectionBodyOfPage .sectionMid .SecondRow .rightInfo3 {
+      font-family: 'Roboto Slab', serif;
+      font-size: 14px;
+      text-align: right;
+      font-weight: bold; }
+    .sectionBodyOfPage .sectionMid .SecondRow .row4 {
+      padding-bottom: 13px;
+      padding-top: 13px; }
+    .sectionBodyOfPage .sectionMid .SecondRow .leftInfo4 {
+      font-family: 'Roboto Slab', serif;
+      font-size: 14px;
+      color: #222831; }
+    .sectionBodyOfPage .sectionMid .SecondRow .rightInfo4 {
+      font-family: 'Roboto Slab', serif;
+      font-size: 14px;
+      text-align: right;
+      font-weight: bold; }
+    .sectionBodyOfPage .sectionMid .SecondRow .row5 {
+      padding-bottom: 13px;
+      padding-top: 13px; }
+    .sectionBodyOfPage .sectionMid .SecondRow .leftInfo5 {
+      font-family: 'Roboto Slab', serif;
+      font-size: 14px;
+      color: #222831; }
+    .sectionBodyOfPage .sectionMid .SecondRow .rightInfo5 {
+      font-family: 'Roboto Slab', serif;
+      font-size: 14px;
+      text-align: right;
+      font-weight: bold; }
+    .sectionBodyOfPage .sectionMid .SecondRow .row6 {
+      padding-bottom: 13px;
+      padding-top: 13px; }
+    .sectionBodyOfPage .sectionMid .SecondRow .leftInfo6 {
+      font-family: 'Roboto Slab', serif;
+      font-size: 14px;
+      color: #222831; }
+    .sectionBodyOfPage .sectionMid .SecondRow .rightInfo6 {
+      font-family: 'Roboto Slab', serif;
+      font-size: 14px;
+      text-align: right;
+      font-weight: bold; }
+    .sectionBodyOfPage .sectionMid .SecondRow .row7 {
+      padding-bottom: 13px;
+      padding-top: 13px; }
+    .sectionBodyOfPage .sectionMid .SecondRow .leftInfo7 {
+      font-family: 'Roboto Slab', serif;
+      font-size: 14px;
+      color: #222831; }
+    .sectionBodyOfPage .sectionMid .SecondRow .rightInfo7 {
+      font-family: 'Roboto Slab', serif;
+      font-size: 14px;
+      text-align: right;
+      font-weight: bold; }
+    .sectionBodyOfPage .sectionMid .SecondRow .row8 {
+      padding-bottom: 13px;
+      padding-top: 13px; }
+    .sectionBodyOfPage .sectionMid .SecondRow .leftInfo8 {
+      font-family: 'Roboto Slab', serif;
+      font-size: 14px;
+      color: #222831; }
+    .sectionBodyOfPage .sectionMid .SecondRow .rightInfo8 {
+      font-family: 'Roboto Slab', serif;
+      font-size: 14px;
+      text-align: right;
+      font-weight: bold; }
 
 /*  Import From pages  */
 
