--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,8 @@
 @import "./components/lineInStepBar";
 @import "./components/imgFirst";
 @import "./components/imgSecond";
+@import "./components/btnContinue";
+@import "./components/footerImages";
 
 /*  Import From layaout  */
 @import "./layout/layout";
