--- a/sass/base/_mixins.scss
+++ b/sass/base/_mixins.scss
@@ -33,3 +33,8 @@
     height: 150px;
     margin-top: 22px;
 }
+
+@mixin mixinForInfoPart{
+    font-family: 'Roboto Slab', serif;
+    font-size: 14px;
+}
