--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,9 @@
   height: 150px;
   margin-top: 22px; }
 
+@media (max-width: 1024px) {
+  .imgFirst {
+    width: 250px; } }
 .imgSecond {
   border-radius: 13px;
   width: 276px;
@@ -33,6 +36,9 @@
   margin-top: 22px;
   margin-bottom: 41px; }
 
+@media (max-width: 1024px) {
+  .imgSecond {
+    width: 250px; } }
 .BtnWrapper {
   margin-right: 110px;
   margin-top: 23px; }
@@ -91,7 +97,8 @@
     margin-left: 14%;
     padding-top: 29px; }
     .sectionBodyOfPage .sectionTop .stepBarBodyRow {
-      display: flex; }
+      display: flex;
+      flex-direction: row; }
       .sectionBodyOfPage .sectionTop .stepBarBodyRow .IconsWrapper {
         display: flex; }
         .sectionBodyOfPage .sectionTop .stepBarBodyRow .IconsWrapper .IconsSpanFirstStep {
@@ -148,6 +155,71 @@
           padding: 14.5px; }
         .sectionBodyOfPage .sectionTop .stepBarBodyRow .IconsWrapper .LastIcon {
           padding: 14.5px; }
+  @media (max-width: 1024px) {
+    .sectionBodyOfPage .sectionTop {
+      margin-left: 5%;
+      padding-top: 29px; } }
+  @media (max-width: 768px) {
+    .sectionBodyOfPage .sectionTop {
+      margin-left: 5%;
+      padding-top: 29px; }
+      .sectionBodyOfPage .sectionTop .stepBarBodyRow {
+        display: flex;
+        flex-direction: row; }
+        .sectionBodyOfPage .sectionTop .stepBarBodyRow .IconsWrapper .IconsSpanFirstStep {
+          width: 50px;
+          height: 50px;
+          font-size: 16px 16px;
+          border-radius: 50%;
+          margin-left: 20px;
+          color: white;
+          background-color: #51859a; }
+        .sectionBodyOfPage .sectionTop .stepBarBodyRow .IconsWrapper .IconsSpanSecondStep {
+          width: 50px;
+          height: 50px;
+          font-size: 16px 16px;
+          border-radius: 50%;
+          margin-left: 20px;
+          color: #717173;
+          border: 1px solid #717173; }
+        .sectionBodyOfPage .sectionTop .stepBarBodyRow .IconsWrapper .IconsSpanLastStep {
+          width: 50px;
+          height: 50px;
+          font-size: 16px 16px;
+          border-radius: 50%;
+          margin-left: 20px;
+          color: #717173;
+          border: 1px solid #717173; }
+        .sectionBodyOfPage .sectionTop .stepBarBodyRow .IconsWrapper .IconFirstText {
+          color: #51859a;
+          width: 112px;
+          margin-left: 14px;
+          margin-top: 10px;
+          font-size: 18px;
+          font-weight: 500;
+          font-family: 'Roboto', sans-serif; }
+        .sectionBodyOfPage .sectionTop .stepBarBodyRow .IconsWrapper .IconSecondText {
+          color: #717173;
+          width: 112px;
+          margin-left: 14px;
+          margin-top: 10px;
+          font-size: 18px;
+          font-weight: 500;
+          font-family: 'Roboto', sans-serif; }
+        .sectionBodyOfPage .sectionTop .stepBarBodyRow .IconsWrapper .IconLastText {
+          color: #717173;
+          width: 112px;
+          margin-left: 14px;
+          margin-top: 10px;
+          font-size: 18px;
+          font-weight: 500;
+          font-family: 'Roboto', sans-serif; }
+        .sectionBodyOfPage .sectionTop .stepBarBodyRow .IconsWrapper .FirstIcon {
+          padding: 17px; }
+        .sectionBodyOfPage .sectionTop .stepBarBodyRow .IconsWrapper .SecondIcon {
+          padding: 14.5px; }
+        .sectionBodyOfPage .sectionTop .stepBarBodyRow .IconsWrapper .LastIcon {
+          padding: 14.5px; } }
   .sectionBodyOfPage .sectionMid {
     border-radius: 20px;
     box-shadow: 0 10px 20px 0 rgba(113, 113, 115, 0.1);
@@ -157,113 +229,116 @@
       margin-left: 30px;
       margin-right: 30px;
       border-bottom: 1px solid #d3dbdd; }
-    .sectionBodyOfPage .sectionMid .SecondRow .row1 {
+    .sectionBodyOfPage .sectionMid .SecondRow .leftPart {
+      margin-left: 33px;
+      margin-right: 30px; }
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .row1 {
       border-bottom: 1px solid #d3dbdd; }
-    .sectionBodyOfPage .sectionMid .SecondRow .row2 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .row2 {
       border-bottom: 1px solid #d3dbdd; }
-    .sectionBodyOfPage .sectionMid .SecondRow .row3 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .row3 {
       border-bottom: 1px solid #d3dbdd; }
-    .sectionBodyOfPage .sectionMid .SecondRow .row4 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .row4 {
       border-bottom: 1px solid #d3dbdd; }
-    .sectionBodyOfPage .sectionMid .SecondRow .row5 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .row5 {
       border-bottom: 1px solid #d3dbdd; }
-    .sectionBodyOfPage .sectionMid .SecondRow .row6 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .row6 {
       border-bottom: 1px solid #d3dbdd; }
-    .sectionBodyOfPage .sectionMid .SecondRow .row7 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .row7 {
       border-bottom: 1px solid #d3dbdd; }
-    .sectionBodyOfPage .sectionMid .SecondRow .row1 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .row1 {
       padding-bottom: 13px;
       padding-top: 13px;
       padding-bottom: 13px; }
-    .sectionBodyOfPage .sectionMid .SecondRow .leftInfo1 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .leftInfo1 {
       font-family: 'Roboto Slab', serif;
       font-size: 14px;
       color: #222831; }
-    .sectionBodyOfPage .sectionMid .SecondRow .rightInfo1 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .rightInfo1 {
       font-family: 'Roboto Slab', serif;
       font-size: 14px;
       font-weight: bold;
       text-align: right; }
-    .sectionBodyOfPage .sectionMid .SecondRow .row2 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .row2 {
       padding-bottom: 13px;
       padding-top: 13px; }
-    .sectionBodyOfPage .sectionMid .SecondRow .leftInfo2 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .leftInfo2 {
       font-family: 'Roboto Slab', serif;
       font-size: 14px;
       color: #222831; }
-    .sectionBodyOfPage .sectionMid .SecondRow .rightInfo2 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .rightInfo2 {
       font-family: 'Roboto Slab', serif;
       font-size: 14px;
       font-weight: bold;
       text-align: right; }
-    .sectionBodyOfPage .sectionMid .SecondRow .row3 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .row3 {
       padding-bottom: 13px;
       padding-top: 13px; }
-    .sectionBodyOfPage .sectionMid .SecondRow .leftInfo3 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .leftInfo3 {
       font-family: 'Roboto Slab', serif;
       font-size: 14px;
       color: #222831; }
-    .sectionBodyOfPage .sectionMid .SecondRow .rightInfo3 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .rightInfo3 {
       font-family: 'Roboto Slab', serif;
       font-size: 14px;
       font-weight: bold;
       text-align: right; }
-    .sectionBodyOfPage .sectionMid .SecondRow .row4 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .row4 {
       padding-bottom: 13px;
       padding-top: 13px; }
-    .sectionBodyOfPage .sectionMid .SecondRow .leftInfo4 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .leftInfo4 {
       font-family: 'Roboto Slab', serif;
       font-size: 14px;
       color: #222831; }
-    .sectionBodyOfPage .sectionMid .SecondRow .rightInfo4 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .rightInfo4 {
       font-family: 'Roboto Slab', serif;
       font-size: 14px;
       font-weight: bold;
       text-align: right; }
-    .sectionBodyOfPage .sectionMid .SecondRow .row5 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .row5 {
       padding-bottom: 13px;
       padding-top: 13px; }
-    .sectionBodyOfPage .sectionMid .SecondRow .leftInfo5 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .leftInfo5 {
       font-family: 'Roboto Slab', serif;
       font-size: 14px;
       color: #222831; }
-    .sectionBodyOfPage .sectionMid .SecondRow .rightInfo5 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .rightInfo5 {
       font-family: 'Roboto Slab', serif;
       font-size: 14px;
       font-weight: bold;
       text-align: right; }
-    .sectionBodyOfPage .sectionMid .SecondRow .row6 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .row6 {
       padding-bottom: 13px;
       padding-top: 13px; }
-    .sectionBodyOfPage .sectionMid .SecondRow .leftInfo6 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .leftInfo6 {
       font-family: 'Roboto Slab', serif;
       font-size: 14px;
       color: #222831; }
-    .sectionBodyOfPage .sectionMid .SecondRow .rightInfo6 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .rightInfo6 {
       font-family: 'Roboto Slab', serif;
       font-size: 14px;
       font-weight: bold;
       text-align: right; }
-    .sectionBodyOfPage .sectionMid .SecondRow .row7 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .row7 {
       padding-bottom: 13px;
       padding-top: 13px; }
-    .sectionBodyOfPage .sectionMid .SecondRow .leftInfo7 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .leftInfo7 {
       font-family: 'Roboto Slab', serif;
       font-size: 14px;
       color: #222831; }
-    .sectionBodyOfPage .sectionMid .SecondRow .rightInfo7 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .rightInfo7 {
       font-family: 'Roboto Slab', serif;
       font-size: 14px;
       font-weight: bold;
       text-align: right; }
-    .sectionBodyOfPage .sectionMid .SecondRow .row8 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .row8 {
       padding-bottom: 13px;
       padding-top: 13px; }
-    .sectionBodyOfPage .sectionMid .SecondRow .leftInfo8 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .leftInfo8 {
       font-family: 'Roboto Slab', serif;
       font-size: 14px;
       color: #222831; }
-    .sectionBodyOfPage .sectionMid .SecondRow .rightInfo8 {
+    .sectionBodyOfPage .sectionMid .SecondRow .rightPart .rightInfo8 {
       font-family: 'Roboto Slab', serif;
       font-size: 14px;
       font-weight: bold;
