--- a/sass/layout/partials/_section.scss
+++ b/sass/layout/partials/_section.scss
@@ -79,42 +79,72 @@
                 display: flex;
                  flex-direction: row;
                 .IconsWrapper{
-                
-                 
+                 position:absolute;
+                 margin-bottom: 150px;
+
                    .IconsSpanFirstStep{
                       
-                       @include mixinForSteps;
-                       color: white;
-                       background-color: $backColorFirstStep;    
+                    margin-left: 75px;
+                    margin-top: 0px;
+                   
+                   
                    }
+
+                   .IconFirstText{
+                    position: absolute;
+                    padding-top: 25px;
+                    padding-right: 5px;
+                    color: $backColorFirstStep;
+                    font-size: 16px;
+                    margin : {
+                        left:50px;
+                        top: 35px;
+                      }
+                  
+                }
+
                    .IconsSpanSecondStep{
                       
-                       @include mixinForSteps;
-                       color: $backColorAnotherSteps;
-                       border: 1px solid $backColorAnotherSteps ;
-                       
-                   }
-                   .IconsSpanLastStep{
-                       @include mixinForSteps;
-                       color: $backColorAnotherSteps;
-                       border: 1px solid $backColorAnotherSteps ;
-                   }
+                    margin-left: 265px;
+                    margin-top: 0px;
                    
-                   .IconFirstText{
-                 
-                       color: $backColorFirstStep;
-                       @include mixinForStepText;
+
                    }
+
                    .IconSecondText{
            
-                       color: $backColorAnotherSteps;
-                       @include mixinForStepText;
-           
+                    position: absolute;
+                    padding-top: 25px;
+                    padding-right: 5px;
+                
+                    font-size: 16px;
+                    margin : {
+                        left:240px;
+                        top: 34px;
+                      }
+        
+                }
+
+
+                   .IconsSpanLastStep{
+                    margin-left: 450px;
+                    margin-top: 0px;
+
                    }
+                  
+                   
                    .IconLastText{
-           
-                       color: $backColorAnotherSteps;
-                       @include mixinForStepText;
+                    
+                    position: absolute;
+                    padding-top: 25px;
+                    padding-right: 5px;
+        
+                    font-size: 16px;
+                    margin : {
+                        left:430px;
+                        top: 35px;
+                      }
+                     
            
                    }
                    
@@ -147,12 +177,17 @@
         margin : {
             left: 30px;
             right: 30px;
+           
         }
 
         border-bottom: 1px solid #d3dbdd;
-    }
+     
+    
+        }
+       
 
     .SecondRow{
+       
         .leftPart{
             margin : {
                 left: 33px;
@@ -191,5 +226,15 @@
         }
        
     }
+    
    }
+  
+}
+
+@media (max-width: 768px) {
+    .test{
+        margin : {
+            top: 100px !important;
+        }
+    } 
 }
