--- a/sass/components/_lineInStepBar.scss
+++ b/sass/components/_lineInStepBar.scss
@@ -1,4 +1,4 @@
-.LineInStepBar1{
+.LineInStepBarOne{
     
           width: 95px;
           margin : {
@@ -13,7 +13,7 @@
         margin-left: 20px;
     }
 }
-.LineInStepBar2{
+.LineInStepBarTwo{
     
          width: 95px;
          margin : {
