--- a/sass/components/_btnContinue.scss
+++ b/sass/components/_btnContinue.scss
@@ -23,3 +23,15 @@
        }   
     }
 }
+@media (max-width: 1024px) {
+    .BtnWrapper{
+        margin-right: 30px; 
+        
+    }
+    }
+@media (max-width: 768px) {
+    .btnContinue{
+        margin-bottom: 20px !important;
+        margin-right: 0px;
+    }
+}
